--- a/src/components/pages/Landing/style.css
+++ b/src/components/pages/Landing/style.css
@@ -10,3 +10,23 @@
     }
   }
   
+  .modal {
+    width: 300px;
+    height: 400px;
+    position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+    background-color: white;
+    box-shadow: 5px 5px 10px 5px grey;
+  }
+  
+  .overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0, 0.8);
+  }
+  
