--- a/src/components/Nav2/style.css
+++ b/src/components/Nav2/style.css
@@ -1,27 +1,60 @@
+
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #F0F3F8;
-    color: rgb(27, 159, 133);
-    padding: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 10px 20px;
+}
+
+.navbar-brand {
+  font-size: 24px;
+  font-weight: bold;
+  color: #333;
+}
+
+.navbar-list {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar-item {
+  font-size: 16px;
+  color: #666;
+  cursor: pointer;
+  margin-right: 20px;
+  transition: color 0.3s ease-in-out;
+}
+
+.navbar-item:last-child {
+  margin-right: 0;
+}
+
+.navbar-item:hover {
+  color: #ff6b6b;
+}
+
+
+@media (max-width: 768px) {
+  .navbar {
+      flex-direction: column;
+      align-items: flex-start;
   }
-  
+
   .navbar-brand {
-    font-size: 1.5rem;
-    font-weight: bold;
+      margin-bottom: 10px;
   }
-  
+
   .navbar-list {
-    list-style: none;
-    display: flex;
-    gap: 1.5em;
-    margin: 0;
-    padding: 0;
-    font-size: 1.1rem;
-    font-weight: bold;
+      flex-direction: column;
   }
-  
+
   .navbar-item {
-    cursor: pointer;
+      margin-right: 0;
+      margin-bottom: 10px;
   }
+}
